[tool.poetry]
name = "vehivavy"
version = "0.1.0"
description = ""
authors = ["RyanGitProj <tsioritianaryan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ampalibe = "^1.1.9"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



